grammar.js
    module: $ => repeat(
      $.stmt,
    ),

    _comma: $ => seq(
      ',',
      // optional($.comment)
    ),
    _colcom: $ => seq(
      ':',
      // optional($.comment)
    ),

    stmt: $ => choice(
      $._simpleStmts,
      $._complexStmt,
    ),


    _simpleStmts: $ => seq(
      sep_repeat1($._simpleStmt, ';'),
      prec(-100, $._newline),
    ),

    _simpleStmt: $ => seq(
      choice(
        prec(0, choice(
          $.returnStmt,
          $.raiseStmt,
          $.yieldStmt,
          $.discardStmt,
          $.breakStmt,
          $.continueStmt,
          $.pragmaStmt,
          $.importStmt,
          $.importExceptStmt,
          $.exportStmt,
          $.fromStmt,
          $.includeStmt,
          // $.commentStmt,
        )), 
        prec(-100, $.exprStmt),
      ), 
      // optional($.comment),
    ),

    expr: $ => choice(
      prec(2, choice(
        // $.blockExpr,
        // $.ifExpr,
        // $.whenExpr,
        // $.caseExpr,
        // $.forExpr,
        // $.tryExpr,
      )),
      prec(1, $._simpleExpr),
    ),

    _complexStmt: $ => choice(
      // choice(
        $.ifStmt,
        prec(-1, $.inlineIfStmt),
        $.whenStmt,
        prec(-1, $.inlineWhenStmt),
        $.caseStmt,
        $.whileStmt,
        $.tryStmt,
        prec(-1, $.inlineTryStmt),
        $.tryExceptStmt,
        $.tryFinallyStmt,
        $.forStmt,
        $.blockStmt,
        $.staticStmt,
        $.deferStmt,
        $.asmStmt,
        $.bindStmt,
        $.mixinStmt,
        seq('proc', $.routine),
        seq('method', $.routine),
        seq('func', $.routine),
        seq('iterator', $.routine),
        seq('macro', $.routine),
        seq('template', $.routine),
        seq('converter', $.routine),
        // seq('type', section($.typeDef)),
        // seq('const', section($.constant)),
        seq(
          choice(
            alias('let', $.keyw), 
            alias('var', $.keyw), 
            alias('using', $.keyw), 
          ),
          section($, $.variable),
        ),
      // ),
      // prec(-2, seq(
      //   sep_repeat1($._simpleStmt, ';'),
      //   $._newline,
      // )),
    ),

    _suite: $ => choice(
      alias($._simpleStmts, $.block),
      seq($._indent, $.block),
      alias($._newline, $.block)
    ),

    block: $ => seq(
      repeat($.stmt),
      $._dedent
    ),

    pragma: $ => prec.left(seq(
      '{.',
      repeat(
        seq(
          $.exprColonEqExpr,
          optional($._comma),
        ),
      ),
      choice('.}', '}'),
    )),

    exprColonEqExpr: $ => prec.left(seq(
      $.expr,
      optional(seq(
        choice(':', '='),
        $.expr,
      ))
    )),

    discardStmt: $ => seq(
      alias('discard', $.keyw), 
      optional(
        optInd($, $.expr),
      ),
    ),

    ifStmt: $ => seq(
      'if',
      $._condStmt,
    ),

    whenStmt: $ => seq(
      'when',
      $._condStmt,
    ),

    _condStmt: $ => prec.left(seq(
      $.expr,
      $._colcom,
      $._suite,
      repeat($.elifStmt),
      optional($.elseStmt),
    )),

    elifStmt: $ => seq(
      alias('elif', $.keyw), 
      $.expr,
      $._colcom,
      $._suite,
    ),

    elseStmt: $ => seq(
      alias('else', $.keyw), 
      $._colcom,
      $._suite,
    ),

    // this is kinda a nasty hack, but I'm so happy it works, couldn't find another way
    // it's necessary because the $.simpleStmts end in $._newline, that doesn't fly for inline statements. 
    // However removing the $._newline from $.simpleStmts leads to a great deal of problems
    inlineIfStmt: $ => seq(
      'if',
      $._inlineCondStmt,
    ),

    inlineWhenStmt: $ => seq(
      'when',
      $._inlineCondStmt,
    ),

    _inlineCondStmt: $ => prec.left(seq(
      $.expr,
      $._colcom,
      inlineSimpleStmts($,
        choice(
          alias($._inlineElifStmt, $.elifStmt),
          alias($._inlineElseStmt, $.elseStmt),
          $._newline
        )
      ),
      // repeat(alias($._inlineElifStmt, $.elifStmt)),
      // optional(alias($._inlineElseStmt, $.elseStmt)),
    )),

    caseStmt: $ => seq(
      alias('case', $.keyw),
      $.expr,
      optional($._colcom),
      $._newline,
      $._branches,
    ),

    _branches: $ => prec.left(seq(
      repeat1($.ofBranch),
      repeat($.elifStmt),
      optional($.elseStmt),
    )),

    ofBranch: $ => seq(
      alias('of', $.keyw),
      $.exprList,
      $._colcom,
      $._suite,
    ),

    whileStmt: $ => seq(
      alias('while', $.keyw),
      $.expr,
      $._colcom,
      $._suite,
    ),

    tryStmt: $ => seq(
      alias('try', $.keyw),
      $._colcom,
      $._suite,
    ),

    inlineTryStmt: $ => seq(
      alias('try', $.keyw),
      $._colcom,
      inlineSimpleStmts($, choice(
        alias($.inlineTryExceptStmt, $.tryExceptStmt),
        alias($.inlineTryFinallyStmt, $.tryFinallyStmt),
        $._newline,
      )),
    ),

    tryExceptStmt: $ => seq(
      alias('except', $.keyw),
      optional($.exprList),
      $._colcom,
      $._suite
    ),

    tryFinallyStmt: $ => seq(
      alias('finally', $.keyw),
      $._colcom,
      $._suite
    ),

    forStmt: $ => seq(
      alias('for', $.keyw), 
      sep_repeat1($._identWithPragma, $._comma),
      alias('in', $.keyw), 
      $.expr,
      $._colcom,
      $._suite,
    ),

    blockStmt: $ => seq(
      alias('block', $.keyw), 
      optional($.symbol),
      $._colcom,
      $._suite,
    ),

    staticStmt: $ => seq(
      alias('static', $.keyw), 
      $._colcom,
      $._suite,
    ),

    deferStmt: $ => seq(
      alias('defer', $.keyw), 
      $._colcom,
      $._suite,
    ),

    asmStmt: $ => seq(
      alias('asm', $.keyw), 
      optional($.pragma),
      choice(
        $.str_lit,
        $.rstr_lit,
        $.triplestr_lit,
      ),
    ),

    // TODO: some edge cases done work
    bindStmt: $ => prec.right(seq(
      alias('bind', $.keyw), 
      optInd($, sep_repeat1($.qualifiedIdent, $._comma))
    )),

    mixinStmt: $ => prec.right(seq(
      alias('mixin', $.keyw), 
      optInd($, sep_repeat1($.qualifiedIdent, $._comma))
    )),

    qualifiedIdent: $ => seq(
      $.symbol,
      optional(seq(
        '.',
        optInd($, $.symbol),
      )),
    ),

    _simpleExpr: $ => prec.left(seq(
      $.primary,
      repeat(seq($.operatorB, optInd($, $.primary))),
      // optional($.pragma),
    )),

    // TODO:
    exprList: $ => sep_repeat1( $.expr, $._comma),

    primary: $ => choice(
      choice(
        // seq(
        //   $.operatorB,
        //   $.primary,
        //   repeat($.primarySuffix),
        // ),
      //   $.tupleDecl,
      //   $.routineExpr,
      //   $.enumDecl,
      //   $.objectDecl,
      //   $.conceptDecl,
      //   seq(
      //     'bind',
      //     $.primary,
      //   ),
      //   seq(
      //     choice('var', 'out', 'ref', 'ptr', 'distinct'),
      //     $.primary,
      //   ),
      ),
      seq(
        repeat($.operator),
        $._identOrLiteral,
        // $.primarySuffix,
      ),
    ),

    _identWithPragma: $ => seq(
      $._identVis,
      optional($.pragma),
    ),

    _identOrLiteral: $ => choice(
      $.literal,
      $.generalizedLit,
      $.symbol,
      // $.par,
      // $.arrayConstr,
      // $.setOrTableConstr,
      // $.tuplesConstr,
      // $.castExpr,
    ),

    literal: $ => choice(
      seq($.int_lit, optional(choice($.int_suffix, $.float_suffix))),
      seq($.float_lit, optional($.float_suffix)),
      // alias($.float32_lit, $.float_lit),
      // alias($.float64_lit, $.float_lit),
      $.custom_numeric_lit,
      $.char_lit,
      $.str_lit,
      $.rstr_lit,
      $.triplestr_lit,
      $.nil,
      $.bool_lit,
    ),

    symbol: $ => choice(
      seq(
        '`',
        repeat1(choice(
          // /\s/,
          // $.keyw,
          $.ident,
          $.literal,
          prec.left(repeat1(choice(
            $.operatorB,
            /[\(\)\[\]\{\}]/
          ))),
        )),
        '`',
      ),
      $.ident,
      // prec(-1, $.keyw),
    ),


    ident: $ => /[a-zA-Z\x80-\xff](_?[a-zA-Z0-9\x80-\xff])*/,

    int_lit: $ => choice(
      hex_lit(),
      dec_lit(),
      oct_lit(),
      bin_lit(),
    ),

    str_lit: $ => seq(
      '"',
      repeat(choice(
        token.immediate(/[^\n\r"]/),
        $.str_esc_seq,
      )),
      token.immediate('"'),
    ),

    triplestr_lit: $ => seq(
      optional(choice('r', 'R')),
      '"""',
      repeat( $._multi_string_content),
      $._multi_string_end,
    ),

    rstr_lit: $ => seq(
      choice('r', 'R'),
      choice(
        seq(
          token.immediate('"'),
          token.immediate('"'),
        ),
        seq(
          token.immediate(/"[^\r\n"]/),
          token.immediate(repeat(/[^\r\n"]|""/)),
          token.immediate('"'),
        ),
      ),
    ),

    bool_lit: $ => choice('true', 'false'),

  }
});




//-------------------------------------------------------------------------------

// function keywords() { return prec(PREC.keyword, choice('addr', 'and', 'as', 'asm', 'bind', 'block', 'break', 'case', 'cast', 'concept', 'const', 'continue', 'converter', 'defer', 'discard', 'distinct', 'div', 'do', 'elif', 'else', 'end', 'enum', 'except', 'export', 'finally', 'for', 'from', 'func', 'if', 'import', 'in', 'include', 'interface', 'is', 'isnot', 'iterator', 'let', 'macro', 'method', 'mixin', 'mod', 'nil', 'not', 'notin', 'object', 'of', 'or', 'out', 'proc', 'ptr', 'raise', 'ref', 'return', 'shl', 'shr', 'static', 'template', 'try', 'tuple', 'type', 'using', 'var', 'when', 'while', 'xor', 'yield')) }
// function parKeywords() { return prec(PREC.keyword, choice('discard' , 'include' , 'if' , 'while' , 'case' , 'try', 'finally' , 'except' , 'for' , 'block' , 'const' , 'let')) }


function optInd($, content) {
  return choice(
    seq(
      $._indent,
      content,
      $._dedent
    ),
    content,
  )
}

function optPar($, content) {
  return choice(
    seq(
      $._indent,
      content,
    ),
    seq(
      // $._samedent,
      content,
    ),
    content,
  )
}

function section($, content) {
  return prec.left(choice(
    seq(
      // optional($.comment),
      content,
    ),
    seq(
      $._indent,
      repeat1(seq(
        choice(
          content,
          // $.comment,
        ),
        // $._samedent,
      )),
      $._dedent,
    ),
  ))
}

function sep_repeat1(content, separator, allow_trailing=true) {
  if (allow_trailing) {
    return seq(
      content,
      repeat(seq(
        separator,
        content,
      )),
      optional(separator),
    )
  } else {
    return seq(
      content,
      repeat(seq(
        separator,
        content,
      )),
    )
  }
}

function sep_repeat(content, separator, allow_trailing=true) {
  if (allow_trailing) {
    return optional(seq(
      content,
      repeat(seq(
        separator,
        content,
      )),
      optional(separator),
    ))
  } else {
    return optional(seq(
      content,
      repeat(seq(
        separator,
        content,
      )),
    ))
  }
}

function hex_lit() { return /0[xX][0-9A-Fa-f](_?[0-9A-Fa-f])*/ }
function dec_lit() { return /[0-9](_?[0-9])*/ }
function oct_lit() { return /0o[0-7](_?[0-7])*/ }
function bin_lit() { return /0[bB][01](_?[01])*/ }

/* TODO: 
 * "For the unary_minus rule there are further restrictions that are not covered
 * in the formal grammar. For - to be part of the number literal its immediately
 * preceeding character has to be in the set 
 * {' ', '\t', '\n', '\r', ',', ';', '(', '[', '{'}.
 * This set was designed to cover most cases in a natural manner."
 */
// function unary_minus() { return prec(PREC.unary, /[ \t\n\r,;\(\[\{][-\+]/,) }

function inlineSimpleStmts($, closing_pattern) {
  return prec.left(seq(
    sep_repeat1($._simpleStmt, ';'),
    closing_pattern,
  ))
}
